--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.form
@@ -24,11 +24,9 @@
               <text resource-bundle="com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog" key="label.connection.name"/>
             </properties>
           </component>
-          <component id="9fe53" class="javax.swing.JTextField" binding="connectionNameTextField">
+          <component id="29159" class="com.l7tech.gui.widgets.SquigglyTextField" binding="connectionNameTextField">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
