--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AssertionInfoDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AssertionInfoDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="contentPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="553" height="249"/>
+      <xy x="20" y="20" width="553" height="271"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -32,26 +32,6 @@
           <text value="Context Variables Set:"/>
         </properties>
       </component>
-      <grid id="7fe52" binding="setsVariablesTablePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="2d910" class="javax.swing.JTable" binding="setsVariablesTable">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="200" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <enabled value="true"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
       <component id="fc248" class="javax.swing.JLabel" binding="setsVariablesLabel">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -106,24 +86,37 @@
           <text value=""/>
         </properties>
       </component>
-      <grid id="d696f" binding="usesVariablesTablePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <scrollpane id="a5ed0" binding="contextVariableSetScrollPane">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="2d910" class="javax.swing.JTable" binding="setsVariablesTable">
+            <constraints/>
+            <properties>
+              <enabled value="true"/>
+              <preferredScrollableViewportSize width="450" height="200"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <scrollpane id="110ac" binding="contextVariableUseScrollPane">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
           <component id="88071" class="javax.swing.JTable" binding="usesVariablesTable">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="200" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
+            <constraints/>
+            <properties>
+              <preferredScrollableViewportSize width="450" height="200"/>
+            </properties>
           </component>
         </children>
-      </grid>
+      </scrollpane>
     </children>
   </grid>
 </form>
