ug FR-403: adding support for hourly & daily log file rotation
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32047 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SinkConfigurationPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SinkConfigurationPropertiesDialog.form
@@ -185,7 +185,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="af2b3" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="af2b3" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title-resource-bundle="com/l7tech/console/resources/SinkConfigurationPropertiesDialog" title-key="tabs.fileSettings.title"/>
@@ -204,7 +204,7 @@
               </component>
               <vspacer id="bbf5a">
                 <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
               <component id="c210c" class="javax.swing.JSpinner" binding="fileMaxSizeField">
@@ -240,6 +240,28 @@
               <component id="8ba90" class="javax.swing.JComboBox" binding="fileFormatField">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="13b" class="javax.swing.JCheckBox" binding="rollingLogFileField">
+                <constraints>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Rolling Log"/>
+                </properties>
+              </component>
+              <component id="4bf27" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Rolling &amp;Interval"/>
+                </properties>
+              </component>
+              <component id="af0d6" class="javax.swing.JComboBox" binding="rollingIntervalField">
+                <constraints>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
               </component>
