ug FR-362: code review clean up and add better descriptions part 2 of changelist 32070
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32071 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/ExternalAuditStoreConfigJdbc.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/ExternalAuditStoreConfigJdbc.form
@@ -78,7 +78,7 @@
             </constraints>
             <properties>
               <selected value="true"/>
-              <text value="Create Default Audit Sink and Lookup Policy"/>
+              <text value="Create External JDBC Audit Sink and Lookup Policy"/>
             </properties>
           </component>
         </children>
